--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "bootstrap": "^5.3.2",
     "next": "14.0.4",
     "react": "^18",
+    "react-bootstrap": "^2.9.2",
     "react-dom": "^18",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "@types/bootstrap": "^5.2.10",
     "eslint": "^8",
     "eslint-config-next": "14.0.4"
   }
