--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@fortawesome/react-fontawesome": "^0.2.0",
     "aos": "^3.0.0-beta.6",
+    "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
     "next": "14.0.4",
     "react": "^18",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
