--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.6.5",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.2",
+    "mongoose": "^8.0.4",
     "next": "14.0.4",
+    "nodemailer": "^6.9.8",
     "react": "^18",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18",
