--- a/package.json
+++ b/package.json
@@ -11,20 +11,17 @@
   "dependencies": {
     "@fortawesome/react-fontawesome": "^0.2.0",
     "aos": "^3.0.0-beta.6",
-<<<<<<< HEAD
+    "axios": "^1.6.5",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "bootstrap": "^5.3.2",
+    "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.4",
     "next": "14.0.4",
+    "next-connect": "^1.0.0",
     "node": "^21.2.0",
-=======
-    "axios": "^1.6.5",
-    "bcryptjs": "^2.4.3",
-    "bootstrap": "^5.3.2",
-    "mongoose": "^8.0.4",
-    "next": "14.0.4",
->>>>>>> 71a26eb156019e0014f8c666010123fe3ca87d08
     "nodemailer": "^6.9.8",
     "react": "^18",
     "react-bootstrap": "^2.9.2",
