--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.2",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "fs": "^0.0.1-security",
+    "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.4",
     "next": "14.0.4",
@@ -28,7 +31,9 @@
     "react-dom": "^18",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "socket.io": "^4.7.4",
+    "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.10",
