--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.4",
-    "next": "14.0.4",
+    "next": "^14.1.0",
     "next-connect": "^1.0.0",
     "nodemailer": "^6.9.8",
     "react": "^18",
